updated version to 8.5.0