@@ -1,3 +1,11 @@
+/*
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
+ */
+
 package org.elasticsearch.http.netty4;
 
 import io.netty.buffer.ByteBuf;
@@ -11,8 +19,11 @@ import io.netty.handler.codec.http.HttpMethod;
 import io.netty.handler.codec.http.cookie.Cookie;
 import io.netty.handler.codec.http.cookie.ServerCookieDecoder;
 import io.netty.handler.codec.http.cookie.ServerCookieEncoder;
+
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.http.HttpRequest;
+import org.elasticsearch.http.HttpResponse;
+import org.elasticsearch.rest.ChunkedRestResponseBody;
 import org.elasticsearch.rest.RestRequest;
 import org.elasticsearch.rest.RestStatus;
 import org.elasticsearch.transport.netty4.Netty4Utils;
@@ -35,45 +46,52 @@ public class Netty4HttpRequest implements HttpRequest {
     private final Exception inboundException;
     private final boolean pooled;
 
-    Netty4HttpRequest(FullHttpRequest request) {
+    private final int sequence;
+
+    Netty4HttpRequest(int sequence, FullHttpRequest request) {
         this(
-                request,
-                new HttpHeadersMap(request.headers()),
-                new AtomicBoolean(false),
-                true,
-                Netty4Utils.toBytesReference(request.content())
+            sequence,
+            request,
+            new HttpHeadersMap(request.headers()),
+            new AtomicBoolean(false),
+            true,
+            Netty4Utils.toBytesReference(request.content())
         );
     }
 
-    Netty4HttpRequest(FullHttpRequest request, Exception inboundException) {
+    Netty4HttpRequest(int sequence, FullHttpRequest request, Exception inboundException) {
         this(
-                request,
-                new HttpHeadersMap(request.headers()),
-                new AtomicBoolean(false),
-                true,
-                Netty4Utils.toBytesReference(request.content()),
-                inboundException
+            sequence,
+            request,
+            new HttpHeadersMap(request.headers()),
+            new AtomicBoolean(false),
+            true,
+            Netty4Utils.toBytesReference(request.content()),
+            inboundException
         );
     }
 
     private Netty4HttpRequest(
-            FullHttpRequest request,
-            HttpHeadersMap headers,
-            AtomicBoolean released,
-            boolean pooled,
-            BytesReference content
+        int sequence,
+        FullHttpRequest request,
+        HttpHeadersMap headers,
+        AtomicBoolean released,
+        boolean pooled,
+        BytesReference content
     ) {
-        this(request, headers, released, pooled, content, null);
+        this(sequence, request, headers, released, pooled, content, null);
     }
 
     private Netty4HttpRequest(
-            FullHttpRequest request,
-            HttpHeadersMap headers,
-            AtomicBoolean released,
-            boolean pooled,
-            BytesReference content,
-            Exception inboundException
+        int sequence,
+        FullHttpRequest request,
+        HttpHeadersMap headers,
+        AtomicBoolean released,
+        boolean pooled,
+        BytesReference content,
+        Exception inboundException
     ) {
+        this.sequence = sequence;
         this.request = request;
         this.headers = headers;
         this.content = content;
@@ -143,18 +161,19 @@ public class Netty4HttpRequest implements HttpRequest {
         try {
             final ByteBuf copiedContent = Unpooled.copiedBuffer(request.content());
             return new Netty4HttpRequest(
-                    new DefaultFullHttpRequest(
-                            request.protocolVersion(),
-                            request.method(),
-                            request.uri(),
-                            copiedContent,
-                            request.headers(),
-                            request.trailingHeaders()
-                    ),
-                    headers,
-                    new AtomicBoolean(false),
-                    false,
-                    Netty4Utils.toBytesReference(copiedContent)
+                sequence,
+                new DefaultFullHttpRequest(
+                    request.protocolVersion(),
+                    request.method(),
+                    request.uri(),
+                    copiedContent,
+                    request.headers(),
+                    request.trailingHeaders()
+                ),
+                headers,
+                new AtomicBoolean(false),
+                false,
+                Netty4Utils.toBytesReference(copiedContent)
             );
         } finally {
             release();
@@ -198,28 +217,36 @@ public class Netty4HttpRequest implements HttpRequest {
         trailingHeaders.add(request.trailingHeaders());
         trailingHeaders.remove(header);
         FullHttpRequest requestWithoutHeader = new DefaultFullHttpRequest(
-                request.protocolVersion(),
-                request.method(),
-                request.uri(),
-                request.content(),
-                headersWithoutContentTypeHeader,
-                trailingHeaders
+            request.protocolVersion(),
+            request.method(),
+            request.uri(),
+            request.content(),
+            headersWithoutContentTypeHeader,
+            trailingHeaders
         );
-        return new Netty4HttpRequest(requestWithoutHeader, new HttpHeadersMap(requestWithoutHeader.headers()), released, pooled, content);
+        return new Netty4HttpRequest(
+            sequence,
+            requestWithoutHeader,
+            new HttpHeadersMap(requestWithoutHeader.headers()),
+            released,
+            pooled,
+            content
+        );
     }
 
     @Override
     public Netty4HttpResponse createResponse(RestStatus status, BytesReference contentRef) {
-        return new Netty4HttpResponse(request.headers(), request.protocolVersion(), status, contentRef);
+        return new Netty4HttpResponse(sequence, request.protocolVersion(), status, contentRef);
+    }
+
+    @Override
+    public HttpResponse createResponse(RestStatus status, ChunkedRestResponseBody content) {
+        return new Netty4ChunkedHttpResponse(sequence, request.protocolVersion(), status, content);
     }
 
     @Override
     public Exception getInboundException() {
         return inboundException;
-    }
-
-    public FullHttpRequest nettyRequest() {
-        return request;
     }
 
     /**
@@ -290,15 +317,15 @@ public class Netty4HttpRequest implements HttpRequest {
 
         @Override
         public Collection<List<String>> values() {
-            return httpHeaders.names().stream().map(k -> Collections.unmodifiableList(httpHeaders.getAll(k))).collect(Collectors.toList());
+            return httpHeaders.names().stream().map(k -> Collections.unmodifiableList(httpHeaders.getAll(k))).toList();
         }
 
         @Override
         public Set<Entry<String, List<String>>> entrySet() {
             return httpHeaders.names()
-                    .stream()
-                    .map(k -> new AbstractMap.SimpleImmutableEntry<>(k, httpHeaders.getAll(k)))
-                    .collect(Collectors.toSet());
+                .stream()
+                .map(k -> new AbstractMap.SimpleImmutableEntry<>(k, httpHeaders.getAll(k)))
+                .collect(Collectors.toSet());
         }
     }
 }
